syntax = "proto3";
option java_multiple_files = true;
package io.github.bfeng.simplemapred.resource;

message InitClusterRequest {
    int32 numberOfMappers = 1;
    int32 numberOfReducers = 2;
}

message InitClusterResponse {
    int32 clusterId = 1;
}

message DestroyClusterRequest {
    int32 clusterId = 1;
}

message DestroyClusterResponse {
    int32 status = 1;
}

message RunMapReduceRequest {
    int32 clusterId = 1;
    string mapReduceClass = 2;
    repeated string inputFiles = 3;
    repeated string outputFiles = 4;
}

message RunMapReduceResponse {
    int32 status = 1;
}

service MasterService {
    rpc initCluster (InitClusterRequest) returns (InitClusterResponse);

    rpc runMapReduce (RunMapReduceRequest) returns (RunMapReduceResponse);

    rpc destroyCluster (DestroyClusterRequest) returns (DestroyClusterResponse);
}